<resources>
    <string name="banner_ad_unit_id">ca-app-pub-8212638041206076/9656479813</string>
    <string name="app_name">Keno</string>
    <string name="title_keno">Keno</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_keno">Keno</string>
    <string name="donateRequest">Keno is an OSP</string>

    <string name="About">Keno is an Attendance Manager that allows you to manage your attendance effectively and easily . </string>
    <string name="Github">Fork us on GitHub</string>
    <string name="Rate">Rate Us</string>
    <string name="Donate">Donate</string>
    <string name="intro_message">It\'s empty here !\n "Add Subject".</string>
    <string name="subject">Subject</string>
    <string name="classes_attended">Classes Attended</string>
    <string name="total_classes">Total Classes</string>
    <string name="Contact">Contact Us</string>
    <string name="version">Version 0.0.4-beta</string>
    <string name="delete">Yes</string>
    <string name="nosorry">No</string>
    <string name="AlertMessage">Are you sure you want to delete this subject ?</string>

    <string name="already_a_member_login">Already a member? Login</string>
    <string name="signup">Signup</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="forgot_your_credentials">Forgot Your Credentials?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="please_enter_your_email_id_below">Please enter your Email i\'d below</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="thank_you_for_signing_up">Thank you for Signing up</string>
    <string name="not_verified">Not Verified</string>
    <string name="help">Help</string>
    <string name="stats">Stats</string>
    <string name="syllabus">Syllabus</string>
    <string name="notes">notes</string>
    <string name="title_activity_settings">Settings</string>


    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="notes_empty">No Notes Found</string>
    <string name="what_s_new">What\'s new?</string>
</resources>
