<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:background="#edeeef"
    android:paddingTop="@dimen/activity_vertical_margin"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:paddingTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--USername-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:textColor="#000"
                android:id="@+id/Username"
                android:background="@android:color/transparent"
                android:padding="14dp"
                android:hint="@string/username"
                android:textColorHint="#000" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000" />
            <!--Email-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:textColor="#000"
                android:id="@+id/Email"
                android:background="@android:color/transparent"
                android:padding="14dp"
                android:hint="@string/email"
                android:textColorHint="#000" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000" />
            <!--Mobile Number-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/mobile"
                android:padding="14dp"
                android:hint="@string/mobile_number"
                android:textColorHint="#000"
                android:background="@android:color/transparent"
                android:maxLength="10"
                android:layout_marginTop="4dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000" />
            <!--Password-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:textColor="#000"
                android:id="@+id/Password"
                android:padding="14dp"
                android:hint="@string/password"
                android:textColorHint="#000"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:layout_marginTop="4dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000" />
            <!--Cpassword-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:textColor="#000"
                android:id="@+id/CPassword"
                android:background="@android:color/transparent"
                android:padding="14dp"
                android:hint="@string/confirm_password"
                android:textColorHint="#000" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000" />
            <CheckBox
                android:id="@+id/checkBox"
                android:padding="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Agree to terms and conditions?"
                android:textColor="#000"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:checked="false"
                android:textStyle="normal"/>


            <Button
                android:id="@+id/signup"
                android:onClick="signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:clickable="true"
                android:focusable="true"
                android:textSize="18sp"
                android:background="@drawable/button_shape"
                android:textColor="#FFF"
                android:padding="16dp"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginTop="9dp"/>

            <Button
                android:id="@+id/login"
                android:onClick="loginPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_a_member_login"
                android:textAllCaps="false"
                android:textColor="#edeeef"
                android:textStyle="normal"
                android:textSize="18sp"
                android:padding="16dp"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginTop="12dp"
                android:background="@drawable/button_shape2"/>



        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
</LinearLayout>