<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:background="@color/blue"
    android:paddingTop="@dimen/activity_vertical_margin"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forgot">

    <!-- android:background="#f7f8f9"-->

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:paddingTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_your_credentials"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:paddingBottom="100dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_enter_your_email_id_below"
                    android:textStyle="italic"
                    android:textColor="@color/white"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/forgotemail"
                    android:drawablePadding="16dp"
                    android:padding="16dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/white"
                    android:background="@android:color/transparent"
                    android:maxLines="1"
                    android:layout_marginTop="4dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000" />

                <Button
                    android:id="@+id/forgot"
                    android:onClick="forgot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="#FFF"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:padding="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_shape2"
                    android:layout_marginBottom="50dp"/>
            </LinearLayout>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

</RelativeLayout>