<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/blue"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/subject"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"/>


        <EditText
            android:id="@+id/subname"
            android:textColorHint="@color/white"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:textColor="@color/white"
            android:gravity="center"
            android:inputType="textCapWords"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_classes"
            android:textColor="@color/white"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <EditText
            android:id="@+id/ttlcls"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:gravity="center"
            android:textColorHint="@color/hintcolor"
            android:hint="Present + Absent"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/classes_attended"
            android:textColor="@color/white"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <EditText
            android:id="@+id/clsatnd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="Present till date"
            android:textColorHint="@color/hintcolor"
            android:inputType="number"/>
    </LinearLayout>


</LinearLayout>
